--- a/SI656_AlquilerEquipos.Web/Views/Cliente/Index.cshtml
+++ b/SI656_AlquilerEquipos.Web/Views/Cliente/Index.cshtml
@@ -1,70 +1,148 @@
-﻿@model IEnumerable<SI656_AlquilerEquipos.Data.cliente>
+﻿@model SI656_AlquilerEquipos.Web.ViewModel.Cliente.IndexViewModel
 
 @{
     ViewBag.Title = "Index";
 }
 
-    <div class="container-fluid">
+@*<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">*@
 
-        <p class="mb-4"></p>
-        <!-- Page Heading -->
-        <h1 class="h3 mb-2 text-gray-900"><strong>Clientes</strong></h1>
-        <p class="mb-4"></p>
-        <p>
-            @Html.ActionLink("Nuevo Cliente", "Create", null, new { @class = "d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" })
-        </p>
-        <p class="mb-4"></p>
+<div class="container-fluid">
 
-        <!-- DataTales Example -->
-        <div class="card shadow mb-4">
-            <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary"></h6>
-            </div>
-            <div class="card-body">
-                <div class="table-responsive">
+    <p class="mb-4"></p>
+    <!-- Page Heading -->
+    <h1 class="h3 mb-2 text-gray-900"><strong>Clientes</strong></h1>
+    <p class="mb-4"></p>
+    <p>
+        @Html.ActionLink("Nuevo Cliente", "Create", null, new { @class = "d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" })
+    </p>
+    <p class="mb-4"></p>
 
-                    <table class="table">
+    <!-- DataTales Example -->
+    <div class="card shadow mb-4">
+        <div class="card-header py-3">
+            <h6 class="m-0 font-weight-bold text-primary"></h6>
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table id="example" class="" style="width:100%">
+                    <thead>
                         <tr>
-                            <th>
-                                @Html.DisplayNameFor(model => model.nombre)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.sexo)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.documento)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.tipo_documento_id)
-                            </th>
-                            <th>Opciones</th>
+                            <th>Nombre</th>
+                            <th>Genero</th>
+                            <th>Nro Documento</th>
+                            <th>Tipo Documento</th>
+                            <th></th>
                         </tr>
+                    </thead>
+                </table>
 
-                        @foreach (var item in Model)
-                        {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.nombre)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.sexo)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.documento)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.tipo_documento_id)
-                                </td>
-                                <td>
-                                    @Html.ActionLink("Edit", "Edit", new { id = item.id }, new { @class = "d-none d-sm-inline-block btn btn-sm btn-info shadow-sm" }) |
-                                    @Html.ActionLink("Delete", "Delete", new { id = item.id }, new { @class = "d-none d-sm-inline-block btn btn-sm btn-danger shadow-sm" })
-                                </td>
-                            </tr>
-                        }
-
-                    </table>
-                </div>
             </div>
         </div>
-
     </div>
+
+</div>
+
+@*<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>*@
+
+<script type="text/javascript">
+
+    $(document).ready(function () {
+
+        var table = $('#example').DataTable({
+            "data": @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.ClientList, Newtonsoft.Json.Formatting.Indented)),
+            "language": {
+                url: "http://cdn.datatables.net/plug-ins/1.10.20/i18n/Spanish.json"
+            },
+            "columns": [
+                { data: 'nombre' },             //    0
+                { data: 'sexo' },               //    1
+                { data: 'documento' },          //    2
+                //{ data: 'tipo_documento' },     //    3
+                { data: 'tipo_documento_id' },                 //    4
+                { data: 'id' },                 //    4
+            ],
+            "sScrollX": "100%",
+            "sScrollXInner": "100%",
+            "columnDefs": [
+                {
+                    "targets": [0, 1, 2, 3, 4],
+                    "class": "text-center"
+                },
+                {
+                    "orderable": false,
+                    //"width": "12%",
+                    "targets": [4],
+                    "render": function (data, type, row, meta) {
+                        let uriClientEdit = '@Url.Action("Edit","Cliente" )' + '?id=' + data;
+                        @*let uriClientDetail = '@Url.Action("Detail","Cliente")' + '?id=' + data;*@
+                        let content = "" +
+                            "<div class='btn-group'>" +
+                            "<button type='button'class='btn btn-sm btn-light dropdown-toggle' data-toggle='dropdown' aria-expanded='false'> Opciones <i class='mdi mdi-chevron-dow'></i></button>" +
+                            "<div class='dropdown-menu'>" +
+                            "<a class='dropdown-item' href='" + uriClientEdit + "'  data-action='reject'><i class='mdi mdi-edit '></i></a>";
+                            "<a class='dropdown-item btn-delete-client' data-client='" + data + "' href='#'><i class='mdi mdi-trash-can' style='margin-left:3px;'></i></a>" +
+                            "</div>" +
+                            "</div>";
+                        return content;
+                    }
+                }
+            ],
+            "initComplete": function (settings, json) {
+                actionButton();
+            }
+        });
+
+        function actionButton() {
+            //  Delete Account
+            $('.btn-delete-client').click(function () {
+                var driverId = $(this).attr('data-client');
+                swal({
+                    title: "Eliminar cliente",
+                    text: '¿Está seguro que deseas eliminar este cliente?',
+                    type: 'warning',
+                    showCancelButton: true,
+                    cancelButtonClass: 'btn-danger waves-effect waves-light',
+                    cancelButtonText: 'Cancelar',
+                    confirmButtonClass: 'btn-info waves-effect waves-light',
+                    confirmButtonText: 'Aceptar',
+                    allowOutsideClick: false
+                }).then(function (result) {
+                    if (result.value) {
+                        swal({
+                            title: 'Cargando...',
+                            allowOutsideClick: false,
+                            onOpen: () => { swal.showLoading() }
+                        });
+
+                        $.ajax({
+                            url: '@Url.Action("Delete", "Cliente")',
+                            type: 'POST',
+                            data: { id: id}
+                        }).done(function (data) {
+                            if (data.isOk) {
+                                swal({
+                                    title: 'Éxito!',
+                                    text: 'Cuenta eliminada exitosamente.',
+                                    type: 'success',
+                                    timer: 1500,
+                                    showConfirmButton: false
+                                }).then(() => {
+                                    location.reload();
+                                });
+                            } else {
+                                swal({
+                                    title: 'Info.',
+                                    text: "Ha ocurrido un problema, porfavor intentelo mas tarde",
+                                    type: 'info',
+                                    timer: 1500,
+                                    showConfirmButton: false
+                                });
+                                console.log(data.message);
+                            }
+                        });
+                    }
+                });
+            });
+        }
+    }
+</script>
