--- a/SI656_AlquilerEquipos.Web/Views/Shared/_Layout.cshtml
+++ b/SI656_AlquilerEquipos.Web/Views/Shared/_Layout.cshtml
@@ -5,10 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
+    <link href="@Url.Content("~/Resources/vendor/sweetalert2/sweetalert2.min.css")" rel="stylesheet" type="text/css" />
     <link href="/Resources/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link href="/Resources/css/sb-admin-2.min.css" rel="stylesheet">
-    <link href="/Resources/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+    @*<link href="/Resources/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">*@
+    <link href="@Url.Content("~/Resources/vendor/datatables-orignal/jquery.dataTables.css")" rel="stylesheet" type="text/css" />
+    <link href="/Resources/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body id="wrapper">
@@ -67,6 +70,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
     <script src="/Resources/vendor/jquery/jquery.min.js"></script>
     <script src="/Resources/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
@@ -74,8 +78,10 @@
     <script src="/Resources/vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages-->
+    <script src="@Url.Content("~/Resources/vendor/sweetalert2/sweetalert2.min.js")"></script>
     <script src="/Resources/js/sb-admin-2.min.js"></script>
-    <script src="/Resources/vendor/datatables/jquery.dataTables.min.js"></script>
+    <script src="@Url.Content("~/Resources/vendor/datatables-original/jquery.dataTables.js")"></script>
+    @*<script src="/Resources/vendor/datatables/jquery.dataTables.min.js"></script>*@
     <script src="/Resources/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
     <!-- Page level custom scripts -->
