--- a/SI656_AlquilerEquipos.Web/Views/Usuario/Edit.cshtml
+++ b/SI656_AlquilerEquipos.Web/Views/Usuario/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SI656_AlquilerEquipos.Data.usuario
+﻿@model SI656_AlquilerEquipos.Web.ViewModel.Usuario.EditViewModel
 
 @{
     ViewBag.Title = "Edit";
@@ -15,37 +15,37 @@
         <h4>usuario</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.id)
+        @Html.HiddenFor(x => x.Id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(x => x.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.nombre, "", new { @class = "text-danger" })
+                @Html.EditorFor(x => x.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(x => x.Name, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.usuario1, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(x => x.User, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.usuario1, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.usuario1, "", new { @class = "text-danger" })
+                @Html.EditorFor(x => x.User, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(x => x.User, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.clave, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(x => x.Password, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.clave, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.clave, "", new { @class = "text-danger" })
+                @Html.EditorFor(x => x.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(x => x.Password, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.cargo_id, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(x => x.Rol, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.cargo_id, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.cargo_id, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(x => x.Rol, new SelectList(Model.RolList, "id", "nombre"), "- Seleccione -", new { @class = "form-control", @required = "required" })
+                @Html.ValidationMessageFor(x => x.Rol, "", new { @class = "text-danger" })
             </div>
         </div>
 
