--- a/SI656_AlquilerEquipos.Web/Views/Usuario/Index.cshtml
+++ b/SI656_AlquilerEquipos.Web/Views/Usuario/Index.cshtml
@@ -1,51 +1,127 @@
-﻿@model IEnumerable<SI656_AlquilerEquipos.Data.usuario>
+﻿@model SI656_AlquilerEquipos.Web.ViewModel.Usuario.IndexViewModel
 
 @{
     ViewBag.Title = "Index";
 }
+
+@*<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">*@
 
 <h2>Index</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.usuario1)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.clave)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.cargo_id)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.usuario1)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.clave)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.cargo_id)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
-        </td>
-    </tr>
-}
-
+<table id="example" class="" style="width:100%">
+    <thead>
+        <tr>
+            <th>Nombre</th>
+            <th>Usuario</th>
+            <th>Rol</th>
+            <th></th>
+        </tr>
+    </thead>
 </table>
+
+@*<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>*@
+
+<script type="text/javascript">
+
+    $(document).ready(function () {
+
+        var table = $('#example').DataTable({
+            "data": @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.UserList, Newtonsoft.Json.Formatting.Indented)),
+            "language": {
+                url: "http://cdn.datatables.net/plug-ins/1.10.20/i18n/Spanish.json"
+            },
+            "columns": [
+                { data: 'nombre' },             //    0
+                { data: 'usuario1' },               //    1
+                { data: 'cargo_id' },          //    2
+                //{ data: 'tipo_documento' },     //    3
+                { data: 'id' },                 //    4
+            ],
+            "sScrollX": "100%",
+            "sScrollXInner": "100%",
+            "columnDefs": [
+                {
+                    "targets": [0, 1, 2, 3],
+                    "class": "text-center"
+                },
+                {
+                    "orderable": false,
+                    //"width": "12%",
+                    "targets": [3],
+                    "render": function (data, type, row, meta) {
+                        let uriEquipmentEdit = '@Url.Action("Edit","Usuario" )' + '?id=' + data;
+                        @*let uriClientDetail = '@Url.Action("Detail","Cliente")' + '?id=' + data;*@
+                        let content = "" +
+                            "<div class='btn-group'>" +
+                            "<button type='button'class='btn btn-sm btn-light dropdown-toggle' data-toggle='dropdown' aria-expanded='false'> Opciones <i class='mdi mdi-chevron-dow'></i></button>" +
+                            "<div class='dropdown-menu'>" +
+                            "<a class='dropdown-item' href='" + uriEquipmentEdit  + "'  data-action='reject'><i class='mdi mdi-edit '></i></a>";
+                            "<a class='dropdown-item btn-delete-client' data-client='" + data + "' href='#'><i class='mdi mdi-trash-can' style='margin-left:3px;'></i></a>" +
+                            "</div>" +
+                            "</div>";
+                        return content;
+                    }
+                }
+            ],
+            "initComplete": function (settings, json) {
+                actionButton();
+            }
+        });
+
+        function actionButton() {
+            //  Delete Equipment
+            $('.btn-delete-client').click(function () {
+                var driverId = $(this).attr('data-client');
+                swal({
+                    title: "Eliminar equipo",
+                    text: '¿Está seguro que deseas eliminar este equipo?',
+                    type: 'warning',
+                    showCancelButton: true,
+                    cancelButtonClass: 'btn-danger waves-effect waves-light',
+                    cancelButtonText: 'Cancelar',
+                    confirmButtonClass: 'btn-info waves-effect waves-light',
+                    confirmButtonText: 'Aceptar',
+                    allowOutsideClick: false
+                }).then(function (result) {
+                    if (result.value) {
+                        swal({
+                            title: 'Cargando...',
+                            allowOutsideClick: false,
+                            onOpen: () => { swal.showLoading() }
+                        });
+
+                        $.ajax({
+                            url: '@Url.Action("Delete", "Usuario")',
+                            type: 'POST',
+                            data: { id: id}
+                        }).done(function (data) {
+                            if (data.isOk) {
+                                swal({
+                                    title: 'Éxito!',
+                                    text: 'Usuario eliminado exitosamente.',
+                                    type: 'success',
+                                    timer: 1500,
+                                    showConfirmButton: false
+                                }).then(() => {
+                                    location.reload();
+                                });
+                            } else {
+                                swal({
+                                    title: 'Info.',
+                                    text: "Ha ocurrido un problema, porfavor intentelo mas tarde",
+                                    type: 'info',
+                                    timer: 1500,
+                                    showConfirmButton: false
+                                });
+                                console.log(data.message);
+                            }
+                        });
+                    }
+                });
+            });
+        }
+    }
+</script>
