Pruebas Unitarias - Integracion

--- a/WebApplication_AlquilerEquipos/Views/Equipos/Index.cshtml
+++ b/WebApplication_AlquilerEquipos/Views/Equipos/Index.cshtml
@@ -24,7 +24,7 @@
             @Html.DisplayNameFor(model => model.Costo)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Estado.Nombre)
+            @Html.DisplayName("Estado")
         </th>
         <th></th>
     </tr>
