--- a/WebApplication_AlquilerEquipos/Views/Shared/_Layout.cshtml
+++ b/WebApplication_AlquilerEquipos/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             <div class="sidebar-brand-icon">
                 <i class="fas fa-snowboarding"></i>
             </div>
-            <div class="sidebar-brand-text mx-3">SI656</div>
+            <div class="sidebar-brand-text mx-3">AVENTURA EXPRESS</div>
         </a>
 
         <!-- Divider -->
