--- a/WebApplication_AlquilerEquipos/Views/Alquileres/Index.cshtml
+++ b/WebApplication_AlquilerEquipos/Views/Alquileres/Index.cshtml
@@ -57,6 +57,8 @@
                     </tbody>
                 </table>
             </div>
+            <br />
+            <br />
         }
     }
     else
@@ -88,9 +90,10 @@
                             <div class="form-group">
                                 <div class="col-md-6">
                                     @Html.DropDownList("Cliente_Id", null, new { @Id = "name", @class = "form-control" })
+                                    <br />
                                     <label class="control-label col-md-7">Fecha Orden</label>
                                     
-                                        <input type="date" id="fechaOrder" name="fechaOrder" placeholder="Fecha" class="form-control" />
+                                     <input type="date" id="fechaOrder" name="fechaOrder" placeholder="Fecha" class="form-control" />
                                    
                                 </div>
                             </div>
@@ -119,8 +122,8 @@
                             <table id="detailsTable" class="table">
                                 <thead>
                                     <tr>
-                                        <th style="width:30%">Product</th>
-                                        <th style="width:20%">Unit Price</th>
+                                        <th style="width:30%">Equipo</th>
+                                        <th style="width:20%">Precio</th>
                                         <th style="width:10%"></th>
                                     </tr>
                                 </thead>
@@ -161,9 +164,8 @@
         });
         //After Add A New Order In The List, Clear Clean The Form For Add More Order.
         function clearItem() {
-            $("#productName").val('');
+            $("#productName").val('Seleccione Equipo');
             $("#price").val('');
-            $("#quantity").val('');
         }
         // After Add A New Order In The List, If You Want, You Can Remove It.
         $(document).on('click', 'a.deleteItem', function (e) {
