--- a/WebApplication_AlquilerEquipos/Views/Clientes/Index.cshtml
+++ b/WebApplication_AlquilerEquipos/Views/Clientes/Index.cshtml
@@ -15,11 +15,12 @@
             @Html.DisplayNameFor(model => model.Nombre)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Documento)
+            @Html.DisplayName("Tipo Documento")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TipoDocumento.Nombre)
+            @Html.DisplayNameFor(model => model.Documento)
         </th>
+
         <th></th>
     </tr>
 
