--- a/WebApplication_AlquilerEquipos/Views/Home/Index.cshtml
+++ b/WebApplication_AlquilerEquipos/Views/Home/Index.cshtml
@@ -3,29 +3,25 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>AVENTURA EXPRESS</h1>
+    <p class="lead">En AVENTURA EXPRESS conseguiras todos los equipos necesario para tus viajes familiares practicando deporte de aventura.</p>
+    <p><a href="https://www.youtube.com/watch?v=euPLSi-sAk4" class="btn btn-danger btn-lg">Youtube</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2><strong>Clientes</strong></h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            La aplicacion te permite Visualizar , Registrar , Actualizar y Eliminar Clientes.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2><strong>Alquileres</strong></h2>
+        La aplicacion te permite Visualizar , Registrar Alquileres con sus Detalles.
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2><strong>Equipos</strong></h2>
+        La aplicacion te permite Visualizar , Registrar , Actualizar y Eliminar Equipos.
     </div>
 </div>
