--- a/WebApplication_AlquilerEquipos/Views/Account/SignUp.cshtml
+++ b/WebApplication_AlquilerEquipos/Views/Account/SignUp.cshtml
@@ -48,37 +48,31 @@
                                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                 <form class="user">
                                     <div class="form-group">
-                                        @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @type = "text", @class = "form-control form-control-user", @placeholder = "Nombre y Apellidos" } })
+                                        @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @id = "SignUp_txt_Nombre", @type = "text", @class = "form-control form-control-user", @placeholder = "Nombre y Apellidos" } })
                                         @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
                                     </div>
-                                    <div class="form-group row">
-                                        <div class="col-sm-6 mb-3 mb-sm-0">
-                                            @*<input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Last Name">*@
-                                            @Html.DropDownList("Cargo_Id", null, htmlAttributes: new { @class = "form-control form-control-user" })
-                                            @Html.ValidationMessageFor(model => model.Cargo_Id, "", new { @class = "text-danger" })
-                                        </div>
-                                    </div>
+   
                                     <div class="form-group row">
                                         <div class="col-sm-6 mb-3 mb-sm-0">
                                             @*<input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="First Name">*@
-                                            @Html.EditorFor(model => model.NombreUsuario, new { htmlAttributes = new { @type = "text", @class = "form-control form-control-user", @placeholder = "Nombre de Usuario" } })
+                                            @Html.EditorFor(model => model.NombreUsuario, new { htmlAttributes = new { @id = "SignUp_txt_NombreUsuario", @type = "text", @class = "form-control form-control-user", @placeholder = "Nombre de Usuario" } })
                                             @Html.ValidationMessageFor(model => model.NombreUsuario, "", new { @class = "text-danger" })
                                         </div>
                                         <div class="col-sm-6">
                                             @*<input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Last Name">*@
-                                            @Html.EditorFor(model => model.Clave, new { htmlAttributes = new { @type = "password", @class = "form-control form-control-user", @placeholder = "Contraseña" } })
+                                            @Html.EditorFor(model => model.Clave, new { htmlAttributes = new { @id = "SignUp_txt_Clave", @type = "password", @class = "form-control form-control-user", @placeholder = "Contraseña" } })
                                             @Html.ValidationMessageFor(model => model.Clave, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
 
 
-                                    <input type="submit" value="Registrar" class="btn btn-primary btn-user btn-block" />
+                                    <input id="SignUp_btn_Registrar" type="submit" value="Registrar" class="btn btn-primary btn-user btn-block" />
                                     <hr>
 
                                 </form>
 
                                 <div class="text-center">
-                                    <a class="small" href="@Url.Action("Login", "Account")">¿Ya tienes una cuenta? Login!</a>
+                                    <a id="SignUp_btn_Login" class="small" href="@Url.Action("Login", "Account")">¿Ya tienes una cuenta? Login!</a>
                                 </div>
                             </div>
                             <br>
