--- a/WebApplication_AlquilerEquipos/Views/Equipos/Create.cshtml
+++ b/WebApplication_AlquilerEquipos/Views/Equipos/Create.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Create";
 }
-
+ 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
@@ -15,7 +15,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Codigo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Codigo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Codigo, new { htmlAttributes = new { @id="Equipo_txt_Codigo", @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Codigo, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -23,7 +23,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @id = "Equipo_txt_Nombre", @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -31,7 +31,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @id = "Equipo_txt_Descripcion", @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -39,7 +39,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Costo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Costo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Costo, new { htmlAttributes = new { @id = "Equipo_txt_Costo", @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Costo, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -47,21 +47,21 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Estado_Id, "Estado_Id", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("Estado_Id", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("Estado_Id", null, htmlAttributes: new { @id = "Equipo_ddl_Estado", @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Estado_Id, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Guardar Datos" class="btn btn-primary" />
+                <input id="Equipo_btn_Guardar" type="submit" value="Guardar Datos" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Cancelar", "Index")
+    @Html.ActionLink("Cancelar", "Index",null, htmlAttributes: new { @id = "Equipo_btn_Cancelar" })
 </div>
 <br>
 <br>
