--- a/WebApplication_AlquilerEquipos/Views/Equipos/Delete.cshtml
+++ b/WebApplication_AlquilerEquipos/Views/Equipos/Delete.cshtml
@@ -55,11 +55,11 @@
             @Html.AntiForgeryToken()
 
             <div class="form-actions no-color">
-                <input type="submit" value="Eliminar" class="btn btn-danger" />
+                <input id="Equipo_btn_Eliminar" type="submit" value="Eliminar" class="btn btn-danger" />
             </div>
         }
         <br />
         <div>
-            @Html.ActionLink("Cancelar", "Index")
+            @Html.ActionLink("Cancelar", "Index", null, htmlAttributes: new { @id = "Equipo_btn_Cancelar" })
         </div>
     </div>
