--- a/WebApplication_AlquilerEquipos/Views/Usuarios/Edit.cshtml
+++ b/WebApplication_AlquilerEquipos/Views/Usuarios/Edit.cshtml
@@ -17,7 +17,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @id = "Usuario_txt_Nombre", @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -25,7 +25,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.NombreUsuario, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.NombreUsuario, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.NombreUsuario, new { htmlAttributes = new { @id = "Usuario_txt_NombreUsuario", @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NombreUsuario, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -33,22 +33,15 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Clave, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Clave, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Clave, new { htmlAttributes = new { @type = "password" , @id = "Usuario_txt_Clave", @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Clave, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Cargo_Id, "Cargo_Id", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("Cargo_Id", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Cargo_Id, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Guardar Datos" class="btn btn-primary" />
+                <input id="Usuario_btn_Guardar" type="submit" value="Guardar Datos" class="btn btn-primary" />
             </div>
         </div>
     </div>
