Web App with Azure - Functional

--- a/WebApplication_AlquilerEquipos/Views/Clientes/Index.cshtml
+++ b/WebApplication_AlquilerEquipos/Views/Clientes/Index.cshtml
@@ -5,9 +5,9 @@
 }
 
 <h4><strong>Clientes</strong></h4>
-
+<hr />
 <p>
-    @Html.ActionLink("Registrar Cliente", "Create",null, htmlAttributes: new { @id = "Cliente_btn_Registrar" })
+    @Html.ActionLink("Registrar Cliente", "Create",null, htmlAttributes: new { @id = "Cliente_btn_Registrar", @class = "btn btn-primary" })
 </p>
 <table class="table">
     <tr>
