--- a/WebApplication_AlquilerEquipos/Views/Alquileres/Index.cshtml
+++ b/WebApplication_AlquilerEquipos/Views/Alquileres/Index.cshtml
@@ -1,225 +1,74 @@
 ﻿@model IEnumerable<WebApplication_AlquilerEquipos.Models.Alquiler>
-
 @{
     ViewBag.Title = "Index";
 }
 
-<div class="panel panel-default">
-    <h4><strong>Alquileres</strong></h4>
-    <hr />
-    <div class="panel-heading">
-        <div class="row">
-            <button id="Alquiler_btn_Registrar" style="margin-right:10px" class="btn btn-primary pull-right" onclick="addNewOrder()">Registrar Alquiler</button>
+
+
+    <div class="panel panel-default">
+        <h4><strong>Alquileres</strong></h4>
+        <hr />
+        <div>
+            @Html.ActionLink("Registrar Alquiler", "Create", null, new { @Id = "Alquiler_btn_Registrar", @class = "btn btn-primary" })
         </div>
-    </div>
-    <br />
 
-    @*Receive All Database Data From Controller And Display Those Data In Client Side*@
+        <br />
 
-    @if (Model.Count() != 0)
-    {
-        foreach (var item in Model)
+        @*Receive All Database Data From Controller And Display Those Data In Client Side*@
+
+        @if (Model.Count() != 0)
+        {
+            foreach (var item in Model)
+            {
+                <div class="panel-body">
+                    <table class="table table-striped table-responsive">
+                        <tbody>
+                            <tr>
+                                <td><strong>Cliente :</strong> @item.Cliente.Nombre </td>
+                                <td><strong>Fecha Orden :</strong> @item.Fecha.ToString("dddd, dd MMMM yyyy") </td>
+                                <td><strong>Fecha Registro :</strong> @item.FechaRegistro.ToString("dddd, dd MMMM yyyy")</td>
+                            </tr>
+                            <tr>
+                                <td colspan="3">
+                                    <table class="table table-bordered">
+                                        <tbody>
+                                            <tr>
+                                                <th>Equipo</th>
+                                                <th>Descripcion</th>
+                                                <th>Precio</th>
+                                            </tr>
+                                            @{
+                                                var totalBill = 0.0;
+                                            }
+                                            @foreach (var order in item.AlquilerDetalle)
+                                            {
+                                                <tr>
+                                                    <td>@order.Equipo.Nombre</td>
+                                                    <td>@order.Equipo.Descripcion</td>
+                                                    <td>@order.Precio</td>
+                                                </tr>
+                                                totalBill += order.Precio;
+                                            }
+                                        </tbody>
+                                    </table>
+                                    <span class="pull-right" style="margin-right:100px;"><strong>Total del Alquiler :  S/.</strong> @totalBill.ToString("0.00")</span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <br />
+                <br />
+            }
+        }
+        else
         {
             <div class="panel-body">
-                <table class="table table-striped table-responsive">
-                    <tbody>
-                        <tr>
-                            <td><strong>Cliente :</strong> @item.Cliente.Nombre </td>
-                            <td><strong>Fecha Orden :</strong> @item.Fecha.ToString("dddd, dd MMMM yyyy") </td>
-                            <td><strong>Fecha Registro :</strong> @item.FechaRegistro.ToString("dddd, dd MMMM yyyy")</td>
-                        </tr>
-                        <tr>
-                            <td colspan="3">
-                                <table class="table table-bordered">
-                                    <tbody>
-                                        <tr>
-                                            <th>Equipo</th>
-                                            <th>Descripcion</th>
-                                            <th>Precio</th>
-                                        </tr>
-                                        @{
-                                            var totalBill = 0.0;
-                                        }
-                                        @foreach (var order in item.AlquilerDetalle)
-                                        {
-                                            <tr>
-                                                <td>@order.Equipo.Nombre</td>
-                                                <td>@order.Equipo.Descripcion</td>
-                                                <td>@order.Precio</td>
-                                            </tr>
-                                            totalBill += order.Precio;
-                                        }
-                                    </tbody>
-                                </table>
-                                <span class="pull-right" style="margin-right:100px;"><strong>Total del Alquiler :  S/.</strong> @totalBill.ToString("0.00")</span>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <br />
+                <h4><strong>No ha realizado Alquileres !</strong></h4>
             </div>
-            <br />
-            <br />
+
         }
-    }
-    else
-    {
-        <div class="panel-body">
-            <h4><strong>No ha realizado Alquileres !</strong></h4>
-        </div>
-
-    }
-</div>
-
-@using (Html.BeginForm())
-{
-    <div class="modal fade" id="newOrderModal">
-        <div class="modal-dialog modal-lg" style=" width: 900px !important;">
-            <div class="modal-content">
-                <div class="modal-header">
-
-                    <h4><strong>Registrar Alquiler</strong></h4>
-                    <a href="#" class="close" data-dismiss="modal">&times;</a>
-                </div>
-                <form id="NewOrderForm">
-                    <div class="modal-body">
-                        @*Customer Details*@
-                        <h5><strong>Cliente</strong></h5>
-                        <hr />
-                        <div class="form-horizontal">
-
-                            <div class="form-group">
-                                <div class="col-md-6">
-                                    @Html.DropDownList("Cliente_Id", null, new { @Id = "Alquiler_ddl_Cliente", @class = "form-control" })
-                                    <br />
-                                    <label class="control-label col-md-7">Fecha Orden</label>
-                                    
-                                     <input type="date" id="Alquiler_dat_FechaOrder" name="fechaOrder" placeholder="Fecha" class="form-control" />
-                                   
-                                </div>
-                            </div>
-                        </div>
-
-                        @*Order Details*@
-                        <h5><strong>Equipo</strong></h5>
-                        <hr />
-                        <div class="form-horizontal">
-                            <input type="hidden" id="OrderId" />
-                            <div class="form-group">
-                                <div class="col-md-4">
-                                    @Html.DropDownList("Equipo_Id", null, new { @Id = "Alquiler_ddl_Producto", @class = "form-control" })
-
-                                </div>
-                                <label class="control-label col-md-2"></label>
-                                <div class="col-md-4">
-                                    <input type="number" id="Alquiler_txt_Precio" name="price" placeholder="Precio" class="form-control" />
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <button id="addToList" class="btn btn-secondary">Agregar a la Lista</button>
-                            </div>
-
-                            <table id="Alquiler_tabl_Deatalles" class="table">
-                                <thead>
-                                    <tr>
-                                        <th style="width:30%">Equipo</th>
-                                        <th style="width:20%">Precio</th>
-                                        <th style="width:10%"></th>
-                                    </tr>
-                                </thead>
-                                <tbody></tbody>
-                            </table>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="reset" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-                        <button id="Alquiler_btn_Guardar" type="submit" class="btn btn-primary">Guardar Datos</button>
-                    </div>
-                </form>
-            </div>
-        </div>
     </div>
-}
 
 
-@section scripts{
-    <script>
-        //Show Modal.
-        function addNewOrder() {
-            $("#newOrderModal").modal();
-        }
-        //Add Multiple Order.
-        $("#addToList").click(function (e) {
-            e.preventDefault();
-
-            if ($.trim($("#Alquiler_ddl_Producto").val()) == "" || $.trim($("#Alquiler_txt_Precio").val()) == "") return;
-
-            var productName = $("#Alquiler_ddl_Producto").val(),
-                price = $("#Alquiler_txt_Precio").val(),
-                detailsTableBody = $("#Alquiler_tabl_Deatalles tbody");
-
-            var productItem = '<tr><td>' + productName + '</td><td>' + price + '</td><td><a data-itemId="0" href="#" class="deleteItem">Remove</a></td></tr>';
-            detailsTableBody.append(productItem);
-            clearItem();
-        });
-        //After Add A New Order In The List, Clear Clean The Form For Add More Order.
-        function clearItem() {
-            $("#Alquiler_ddl_Producto").val('Seleccione Equipo');
-            $("#Alquiler_txt_Precio").val('');
-        }
-        // After Add A New Order In The List, If You Want, You Can Remove It.
-        $(document).on('click', 'a.deleteItem', function (e) {
-            e.preventDefault();
-            var $self = $(this);
-            if ($(this).attr('data-itemId') == "0") {
-                $(this).parents('tr').css("background-color", "#ff6347").fadeOut(800, function () {
-                    $(this).remove();
-                });
-            }
-        });
-        //After Click Save Button Pass All Data View To Controller For Save Database
-        function saveOrder(data) {
-            return $.ajax({
-                contentType: 'application/json; charset=utf-8',
-                dataType: 'json',
-                type: 'POST',
-                url: "/Alquileres/SaveOrder",
-                data: data,
-                success: function (result) {
-                    alert(result);
-                    location.reload();
-                },
-                error: function () {
-                    alert("Error!")
-                }
-            });
-        }
-        //Collect Multiple Order List For Pass To Controller
-        $("#Alquiler_btn_Guardar").click(function (e) {
-            e.preventDefault();
-
-            var orderArr = [];
-            orderArr.length = 0;
-
-            $.each($("#Alquiler_tabl_Deatalles tbody tr"), function () {
-                orderArr.push({
-                    Equipo_Id: $(this).find('td:eq(0)').html(),
-                    Precio: $(this).find('td:eq(1)').html()
-                });
-            });
-
-
-            var data = JSON.stringify({
-                name: $("#Alquiler_ddl_Cliente").val(),
-                fecha: $("#Alquiler_dat_FechaOrder").val(),
-                order: orderArr
-            });
-
-            $.when(saveOrder(data)).then(function (response) {
-                console.log(response);
-            }).fail(function (err) {
-                console.log(err);
-            });
-        });
-    </script>
-}
